test: kakao api 위경도 기반 카페 검색 테스트 / 반경 3km로 변경